Code repair for Processing 3
Changed some parts of code in BObject.java (before code doesn't work in Processing 3)
Added a missing OBJLoader library
Changed README.md and build.xml

--- a/resources/build.properties
+++ b/resources/build.properties
@@ -29,7 +29,7 @@
 # For Windows the default path would be ${user.home}/workspace/libs (make 
 # adjustments below).
 
-classpath.local.location=D:/eclipse/rigid/lib
+classpath.local.location=lib
 
 
 # For OSX users. 
@@ -47,7 +47,7 @@ classpath.local.location=D:/eclipse/rigid/lib
 
 #classpath.local.include=gluegen-rt.jar
 #classpath.local.include=jogl-all.jar
-classpath.local.include=D:/eclipse/rigid/lib/p5_2.01/core.jar
+classpath.local.include=lib\p5_2.01\core.jar
 
 
 
@@ -56,7 +56,7 @@ classpath.local.include=D:/eclipse/rigid/lib/p5_2.01/core.jar
 # If you don't need to include the libraries folder to your classpath, comment 
 # out the following line.
 
-classpath.libraries.location=D:/eclipse/rigid/lib
+classpath.libraries.location=lib
 
 
 
